Homework from lesson4

--- a/Lesson/index.html
+++ b/Lesson/index.html
@@ -7,6 +7,11 @@
     <title>Lesson 4</title>
 </head>
 <body>
+    <label>
+        <p>Enter number</p>
+        <input type="number" name="number">
+        <button>Go!</button>
+    </label>
     <script src="./js/script.js" ></script>
 </body>
 </html>
